src/sections/title/index.scss
@use 'sass:color';
@import '../../scss/variables.scss';

#Title {
    &::after {
        position: absolute;
        content: "";
        width: 100%;
        bottom: 0;
        height: 10vh;
        background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%);
        display: block;
    }
    .content-container {
        position: absolute;
        top: 0;
        height: 100svh;
        z-index: 9;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: flex-start;
        padding-top: 0;

        h1 {
            font-size: 3rem;
            line-height: 0.8;
            font-weight: $font-extrabold;
            text-transform: uppercase;
            margin: 0;
            padding: 0;

            @media screen and (min-width: 425px) {
                font-size: 4.5rem;
            }
        }

        ul {
            list-style-type: none;
            padding: 0;

            li {
                display: block;
                text-transform: uppercase;
                font-weight: $font-extrabold;
                margin-right: 1rem;
                padding-right: 1rem;

                @media screen and (min-width: 768px) {
                    border-right: 1.5px solid black;
                    display: inline-block;

                    &:last-child {
                        margin-right: 0;
                        padding-right: 0;
                        border-right: 0;
                    }
                }
            }
        }
    }

    .backdrop {
        position: relative;
        height: 100svh;
        width: 100%;
        margin: auto;
        overflow: hidden;
        background: linear-gradient(
            -90deg,
            lighten($teal, 95%) 0%,
            lighten($teal, 80%) 10%,
            lighten($teal, 65%) 25%,
            lighten($teal, 75%) 45%,
            lighten($teal, 85%) 60%,
            lighten($teal, 70%) 75%,
            lighten($teal, 55%) 85%,
            lighten($teal, 40%) 100%
        );
    }

    .backdrop::before,
    .backdrop::after,
    .backdrop > .backdrop-blobs,
    .backdrop > .backdrop-blobs::before,
    .backdrop > .backdrop-blobs::after {
        filter: blur(75px);
    }

    .backdrop::before,
    .backdrop::after {
        position: absolute;
        content: "";
        width: 100%;
        height: 100svh;
        border-radius: 100%;
    }

    .backdrop::before {
        background: #eac8d8;
        top: -50%;
        left: -50%;
    }

    .backdrop::after {
        background: #c49fe7;
        right: -65%;
        top: 25%;
        transform: translateY(-50%);
    }

    // .backdrop > .backdrop-blobs,
    // .backdrop > .backdrop-blobs::before,
    // .backdrop > .backdrop-blobs::after {
    //     border-radius: 100%;
    //     position: absolute;
    // }

    // .backdrop > .backdrop-blobs::before,
    // .backdrop > .backdrop-blobs::after {
    //     content: "";
    //     width: 35%;
    //     height: 100vh;
    //     top: 50%;
    //     transform: translateY(-50%);
    // }

    // .backdrop > .backdrop-blobs {
    //     width: 230px;
    //     height: 230px;
    //     background: #ffc285;
    //     bottom: -60px;
    //     left: 75px;
    // }

    // .backdrop > .backdrop-blobs::before {
    //     background: #8600ff;
    //     left: -40%;
    // }

    // .backdrop > .backdrop-blobs::after {
    //     background: #ff0000;
    //     right: -20%;
    // }
}

